--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "aws-sdk": "^2.814.0",
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.1.4",
     "jsonwebtoken": "^8.5.1",
