--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,16 @@
   "description": "marketplace backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "marketplace",
     "express"
   ],
+  "engines": {
+    "node": "15.x"
+  },
   "author": "jhlee",
   "license": "ISC",
   "dependencies": {
@@ -22,6 +26,7 @@
     "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
